crates/aranya-policy-lang/tests/data/invalid_substruct.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Syntax error
  |
1 | let x = y substruct 4
  |                     ^ expected identifier
